--- a/.github/workflows/build_publish.yaml
+++ b/.github/workflows/build_publish.yaml
@@ -34,7 +34,7 @@ jobs:
         uses: canonical/setup-lxd@v0.1.1
         with:
           channel: 5.21/stable
-      - uses: canonical/craft-actions/rockcraft-pack@main
+      - uses: gboutry/craft-actions/rockcraft-pack@fix/impersonate
         id: rockcraft
         with:
           path: rocks/${{ matrix.rock }}
